--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.0'
         classpath 'com.novoda:bintray-release:0.8.1'
+        classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
     }
 }
 
@@ -31,6 +32,7 @@ allprojects {
         jcenter()
         google()
         maven { url "https://maven.google.com" }
+        maven { url "https://dl.bintray.com/thelasterstar/maven/" }
     }
 }
 
