--- a/matisse/build.gradle
+++ b/matisse/build.gradle
@@ -16,6 +16,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'com.novoda.bintray-release'
 apply plugin: 'checkstyle'
+apply from: 'upload_nexus.gradle'
 
 android {
     compileSdkVersion 28
