--- a/gradle.properties
+++ b/gradle.properties
@@ -27,3 +27,5 @@ RELEASE_REPOSITORY_URL=http://172.30.20.99:8081/repository/maven-releases/
 # Nexus 的私服的用户名称和密码
 NEXUS_USERNAME=admin
 NEXUS_PASSWORD=admin123
+android.useAndroidX=true
+android.enableJetifier=true
